--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,8 @@
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
-    "import itertools"
+    "import itertools\n",
+    "import copy"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ff430917-5fba-4901-8e1e-4a29a3ca6826",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d71c24c8",
    "metadata": {},
    "outputs": [
@@ -120,7 +121,7 @@
        "4    48   2  1217618182"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "44cc8bf6-9d92-42fc-bc18-c1d2452a8a04",
    "metadata": {},
    "outputs": [],
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dc073841-3764-4d20-9ce6-2f6c2eebe162",
    "metadata": {},
    "outputs": [],
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9f5ae2de-1dd7-4afc-b70d-c75b42a533a1",
    "metadata": {},
    "outputs": [
@@ -264,7 +265,7 @@
        "4  202019   46724  2010-01-01"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0cfdc12a-b369-46b3-a2fb-80bf630f0ef7",
    "metadata": {},
    "outputs": [
@@ -349,7 +350,7 @@
        "4  241577  133910  2010-01-01"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f544f296-5a08-49df-ba83-fe15fabb8085",
    "metadata": {},
    "outputs": [
@@ -434,7 +435,7 @@
        "4  231677   31699  2010-01-01"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,35 +458,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1adf7a88-99cc-4b96-9c5d-f3a0476cab7d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#graph for answers_to_questions\n",
     "answers_to_questions_graph = {}\n",
     "\n",
+    "#first create a dictioary where the key is the starting node and contains a tuple with the arriving node and the time\n",
     "for i in range(len(answers_to_questions)):\n",
     "    if answers_to_questions['from'][i] not in answers_to_questions_graph:\n",
     "        answers_to_questions_graph[answers_to_questions['from'][i]] = []\n",
     "    answers_to_questions_graph[answers_to_questions['from'][i]].append((answers_to_questions.to[i], answers_to_questions.time[i]))\n",
     "    \n",
-    "    \n",
+    "\n",
+    "#let's now make a dictionary of dictionaries where the first key is the starting node,\n",
+    "#the second the arriving node (which cointains a list of times) \n",
     "for key in answers_to_questions_graph.keys():\n",
     "    supp = {}\n",
     "    for i in range(len(answers_to_questions_graph[key])):\n",
     "        if answers_to_questions_graph[key][i][0] not in supp:\n",
     "            supp[answers_to_questions_graph[key][i][0]] = []\n",
     "        supp[answers_to_questions_graph[key][i][0]].append(answers_to_questions_graph[key][i][1])\n",
-    "    answers_to_questions_graph[key] = supp"
+    "    answers_to_questions_graph[key] = supp\n",
+    "    \n",
+    "#the procedure for the following cells is the same."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "388d43c3-ef4d-4022-91c1-3f15b2373d77",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#graph for comments_to_answers\n",
     "comments_to_answers_graph = {}\n",
     "\n",
     "for i in range(len(comments_to_answers)):\n",
@@ -506,11 +514,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0f025f85-0db4-42cd-b9bb-84d0b5217c8d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#graph for comments_to_questions\n",
     "comments_to_questions_graph = {}\n",
     "\n",
     "for i in range(len(comments_to_questions)):\n",
@@ -530,12 +539,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b24733b2-5b1e-4c6a-a68a-101512cd5ad8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#total graph\n",
     "graph = {}\n",
+    "\n",
+    "#same procedure, but takes data from all three dataframes\n",
     "\n",
     "for i in range(len(answers_to_questions)):\n",
     "    if answers_to_questions['from'][i] not in graph:\n",
@@ -581,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e917569d-14a0-47c1-bcfc-ee49571c3f7c",
    "metadata": {},
    "outputs": [],
@@ -591,12 +603,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7e81dca6-c60c-487b-9fe5-929f0209faea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def directed(a_graph):                          #most likely it will always be directed....\n",
+    "def directed(a_graph):                          #most likely it will always be directed... (cause of construction)\n",
     "    for key in a_graph.keys():\n",
     "        for key_ in a_graph[key].keys():\n",
     "            if key_ not in a_graph.keys():\n",
@@ -605,17 +617,17 @@
     "                return('directed')\n",
     "            if Counter(a_graph[key][key_]) != Counter(a_graph[key_][key]):\n",
     "                return('directed')\n",
-    "    return('undirected')"
+    "    return('undirected')                       #it basically checks 'simmetry'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "bb4550bb-b5e9-475c-be77-35083d977c5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def n_users(a_graph):\n",
+    "def n_users(a_graph):                          #counts all the nodes that appear in the graph\n",
     "    users=[]\n",
     "    for key in a_graph.keys():\n",
     "        users.append(list(a_graph[key].keys()))\n",
@@ -626,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "9498de0c-67df-4e24-b037-13479843fd0f",
    "metadata": {},
    "outputs": [],
@@ -639,12 +651,12 @@
     "    if directed(a_graph) == 'directed':\n",
     "        return(n)\n",
     "    else:\n",
-    "        return(n/2)"
+    "        return(n/2)                  #it basically counts the number of items in the lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d271fef6-e08e-4994-b7be-d7a38ed75892",
    "metadata": {},
    "outputs": [],
@@ -658,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9709003f-8266-435a-9051-c3673bd59940",
    "metadata": {},
    "outputs": [],
@@ -673,13 +685,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "fff9ecd1-b722-4939-9e3e-a215d101925c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sparse(a_graph):\n",
-    "    if density(a_graph) < 0.7:\n",
+    "    if density(a_graph) < 0.5:        #use a treshold\n",
     "        return('sparse')\n",
     "    else:\n",
     "        return('dense')"
@@ -687,12 +699,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "58507767-e78e-42a0-8c37-369aa47a25a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Functionality_1(a_graph):\n",
+    "def Functionality_1(a_graph):         #combine the previous functions and makes a dictionary\n",
     "   \n",
     "    return({'directed': directed(a_graph), 'n_users': n_users(a_graph), 'n_answers_comments': n_answers_comments(a_graph),\n",
     "           'avg_n_links': avg_n_links(a_graph), 'density': density(a_graph), 'sparse': sparse(a_graph)})"
@@ -700,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "94a74e4b-2ec8-459a-be37-2ade7a368ffd",
    "metadata": {
     "scrolled": true
@@ -717,7 +729,7 @@
        " 'sparse': 'sparse'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,11 +748,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "c50a0ef4-8653-42d7-9718-80e9b73713c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque \n",
+    "\n",
+    "def s_path(a_node, users):                       #find len of shortest path from a_node to every other node \n",
+    "    distances = {}\n",
+    "    visited = {}\n",
+    "    for user in users:\n",
+    "        distances[user] = 999999999\n",
+    "    distances[a_node] = 0\n",
+    "    q = deque()\n",
+    "    q.append(a_node)\n",
+    "    visited[a_node] = True\n",
+    "    \n",
+    "    while q:\n",
+    "        current = q[0]\n",
+    "        q.popleft()\n",
+    "        \n",
+    "        if current in graph.keys():\n",
+    "            for x in graph[current]:\n",
+    "                if x not in visited.keys():\n",
+    "                    q.append(x)\n",
+    "                    visited[x] = True\n",
+    "                    \n",
+    "                if x in distances.keys():\n",
+    "                    if distances[x] > distances[current] + 1:\n",
+    "                        distances[x] = distances[current] + 1 \n",
+    "                else:\n",
+    "                    distances[x] = distances[current] + 1 \n",
+    "                    \n",
+    "    for key in list(distances):\n",
+    "        if distances[key] == 999999999:\n",
+    "            distances.pop(key)\n",
+    "                \n",
+    "    return distances\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "d4e3e0f5-e881-4d8d-bfce-92d5dc6a410f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def betweeness(a_graph, a_node):"
+   ]
   },
   {
    "cell_type": "code",
@@ -748,47 +805,209 @@
    "id": "102f0b43-d6b7-45c6-85b3-174dd22ae2a7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def pagerank(a_graph, a_node):"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "b5df606f-d841-4fb8-963e-836831815bac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def closeness(a_graph, a_node):\n",
+    "    users=[]\n",
+    "    for key in a_graph.keys():\n",
+    "        users.append(list(a_graph[key].keys()))\n",
+    "    users.append(list(a_graph.keys()))\n",
+    "    users = set(list(itertools.chain.from_iterable(users)))\n",
+    "    users.remove(a_node)\n",
+    "    \n",
+    "    distances = s_path(a_node, users)\n",
+    "    \n",
+    "    sum_d = 0\n",
+    "    for key in distances.keys():\n",
+    "        sum_d = sum_d + distances[key]\n",
+    "\n",
+    "    return(len(users)/sum_d)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a3ee3280-0147-40f1-bffa-96194abacecf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def degreec(a_graph, a_node):    #it uses in-degree without taking count of the weigth (it makes more sense to me)\n",
+    "    users=[]                      \n",
+    "    for key in a_graph.keys():\n",
+    "        users.append(list(a_graph[key].keys()))\n",
+    "    users.append(list(a_graph.keys()))\n",
+    "    users = set(list(itertools.chain.from_iterable(users)))           #find all users\n",
+    "    users.remove(a_node)\n",
+    "    \n",
+    "    degreec= 0\n",
+    "    \n",
+    "    for user in users:\n",
+    "        if user in a_graph.keys():                                    #find in-degree\n",
+    "            if a_node in a_graph[user].keys():\n",
+    "                degreec = degreec + 1\n",
+    "                \n",
+    "    return(degreec)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "0d827e21-595b-4798-9f5a-2564b4dcd2c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reduceGraph(graph, start_date, end_date):    #check all the dates and drop if not in range of time\n",
+    "    a_graph = copy.deepcopy(graph)\n",
+    "    start = int(time.mktime(datetime.datetime.strptime(start_date, \"%Y-%m-%d\").timetuple()))\n",
+    "    end = int(time.mktime(datetime.datetime.strptime(end_date,\"%Y-%m-%d\").timetuple()))\n",
+    "    for key in list(a_graph):\n",
+    "        for key_ in list(a_graph[key]):\n",
+    "            for i in range(len(a_graph[key][key_])):\n",
+    "                if int(time.mktime(datetime.datetime.strptime(a_graph[key][key_][i], \"%Y-%m-%d\").timetuple())) > end:\n",
+    "                    a_graph[key][key_][i] = 0\n",
+    "                elif int(time.mktime(datetime.datetime.strptime(a_graph[key][key_][i], \"%Y-%m-%d\").timetuple())) < start:\n",
+    "                    a_graph[key][key_][i] = 0\n",
+    "            a_graph[key][key_] = list(filter(lambda num: num != 0, a_graph[key][key_]))\n",
+    "    \n",
+    "            if len(a_graph[key][key_]) == 0:   #drop keys if empty\n",
+    "                a_graph[key].pop(key_)\n",
+    "        if len(a_graph[key]) == 0:\n",
+    "            a_graph.pop(key)\n",
+    "            \n",
+    "    return(a_graph)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5cfc4aad-6f29-406e-8395-c2036398014e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def Functionality_2 (a_node, start_date, end_date, metric, a_graph = graph):\n",
+    "    a_graph_1 = reduceGraph(a_graph, start_date, end_date)\n",
+    "    if metric == 'Betweeness':\n",
+    "        return(betweeness(a_graph_1, a_node))\n",
+    "    if metric == 'PageRank':\n",
+    "        return(pagerank(a_graph_1, a_node))\n",
+    "    if metric == 'ClosenessCentrality':\n",
+    "        return(closeness(a_graph_1, a_node))\n",
+    "    if metric == 'DegreeCentrality':\n",
+    "        return(degreec(a_graph_1, a_node))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "537d2c90-d842-4ac3-8656-b1d47653c530",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0039210194650609155"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'Betweeness')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "c3b3c8d6-1ac5-452c-a53e-9e4a89e46ba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'PageRank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8727e4a-7a03-4146-99ba-8a8f0ce57ba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'ClosenessCentrality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40b3d894-94bf-4ea5-bbad-cf386a96d6a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'DegreeCentrality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f90045a1-ddd7-4ebf-8adb-906b0fde4d00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = reduceGraph(graph, \"2010-01-01\", \"2010-01-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94230291-8b07-40e4-9a1c-e0e8a87de2ae",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90045a1-ddd7-4ebf-8adb-906b0fde4d00",
+   "id": "214152e6-a640-4e5e-8410-8d2364d89796",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2601754f-03f9-4447-b753-7ef3b50bc1bf",
+   "metadata": {},
+   "source": [
+    "### Functionality 3 - Shortest Ordered Route"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e369e72e-0966-4def-aed0-895ba81ab3da",
+   "metadata": {},
+   "source": [
+    "### Functionality 4 - Disconnecting graphs"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -808,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "d208b4ca",
    "metadata": {},
    "outputs": [],
@@ -835,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "add3acaa",
    "metadata": {},
    "outputs": [
@@ -951,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "45035927-732c-40e9-bf11-01d517b9cc41",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "a6a92341-273a-4db5-94b8-11295f3364bb",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "0fcdd680-3dd5-48a9-bbe1-d8b611be4990",
    "metadata": {},
    "outputs": [
