--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "118ec167-c590-4827-871c-c07be6647eb3",
    "metadata": {},
    "outputs": [],
@@ -748,16 +748,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "id": "c50a0ef4-8653-42d7-9718-80e9b73713c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import deque \n",
     "\n",
-    "def s_path(a_node, users):                       #find len of shortest path from a_node to every other node \n",
+    "def s_path(graph, a_node, users):                       #find len of shortest path from a_node to every other node \n",
     "    distances = {}\n",
-    "    visited = {}\n",
+    "    visited = {}                                        #unweighted version cause it makes more sense to me\n",
     "    for user in users:\n",
     "        distances[user] = 999999999\n",
     "    distances[a_node] = 0\n",
@@ -778,25 +778,84 @@
     "                if x in distances.keys():\n",
     "                    if distances[x] > distances[current] + 1:\n",
     "                        distances[x] = distances[current] + 1 \n",
-    "                else:\n",
-    "                    distances[x] = distances[current] + 1 \n",
+    "        \n",
     "                    \n",
     "    for key in list(distances):\n",
     "        if distances[key] == 999999999:\n",
     "            distances.pop(key)\n",
     "                \n",
-    "    return distances\n",
-    "  "
+    "    return distances"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "025fbca9-b37f-4153-a799-cea41540992f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def s_path_1(graph, a_node,users):\n",
+    "    distances = {}\n",
+    "    visited = {}\n",
+    "    path ={}\n",
+    "    for user in users:\n",
+    "        distances[user] = 999999999\n",
+    "    distances[a_node] = 0\n",
+    "    q = deque()\n",
+    "    q.append(a_node)\n",
+    "    visited[a_node] = True\n",
+    "    path[a_node] = []\n",
+    "    \n",
+    "    while q:\n",
+    "        current = q[0]\n",
+    "        q.popleft()\n",
+    "        \n",
+    "        if current in graph.keys():\n",
+    "            for x in graph[current]:\n",
+    "                if x not in visited.keys():\n",
+    "                    q.append(x)\n",
+    "                    visited[x] = True\n",
+    "                    \n",
+    "                    \n",
+    "                if x in distances.keys():\n",
+    "                    if distances[x] > distances[current] + 1:\n",
+    "                        distances[x] = distances[current] + 1\n",
+    "                        path[x] = path[current]\n",
+    "                        path[x].append(current)\n",
+    "                        \n",
+    "                    \n",
+    "    for key in list(distances):\n",
+    "        if distances[key] == 999999999:\n",
+    "            distances.pop(key)\n",
+    "                \n",
+    "    return path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "d4e3e0f5-e881-4d8d-bfce-92d5dc6a410f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def betweeness(a_graph, a_node):"
+    "def betweeness(a_graph, a_node):\n",
+    "    users=[]\n",
+    "    for key in a_graph.keys():\n",
+    "        users.append(list(a_graph[key].keys()))\n",
+    "    users.append(list(a_graph.keys()))\n",
+    "    users = set(list(itertools.chain.from_iterable(users)))\n",
+    "    users.remove(a_node)\n",
+    "    \n",
+    "    paths = []\n",
+    "    for user in users:\n",
+    "        a = s_path_1(a_graph, user, users)\n",
+    "        for key in a.keys():\n",
+    "            if a_node in a[key]:\n",
+    "                paths.append(1)\n",
+    "            else:\n",
+    "                paths.append(1)\n",
+    "        \n",
+    "    return(sum(paths)/len(paths))"
    ]
   },
   {
@@ -811,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "b5df606f-d841-4fb8-963e-836831815bac",
    "metadata": {},
    "outputs": [],
@@ -824,7 +883,7 @@
     "    users = set(list(itertools.chain.from_iterable(users)))\n",
     "    users.remove(a_node)\n",
     "    \n",
-    "    distances = s_path(a_node, users)\n",
+    "    distances = s_path(a_graph, a_node, users)\n",
     "    \n",
     "    sum_d = 0\n",
     "    for key in distances.keys():\n",
@@ -835,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "a3ee3280-0147-40f1-bffa-96194abacecf",
    "metadata": {},
    "outputs": [],
@@ -860,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "0d827e21-595b-4798-9f5a-2564b4dcd2c0",
    "metadata": {},
    "outputs": [],
@@ -888,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "5cfc4aad-6f29-406e-8395-c2036398014e",
    "metadata": {},
    "outputs": [],
@@ -907,19 +966,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "id": "537d2c90-d842-4ac3-8656-b1d47653c530",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0039210194650609155"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "227411",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-f738375c35b0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mFunctionality_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m227411\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2010-01-01\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2010-01-01\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Betweeness'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-28-9a26a95f23ca>\u001b[0m in \u001b[0;36mFunctionality_2\u001b[1;34m(a_node, start_date, end_date, metric, a_graph)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0ma_graph_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreduceGraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_date\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'Betweeness'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbetweeness\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'PageRank'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpagerank\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-33-9f114a37d40f>\u001b[0m in \u001b[0;36mbetweeness\u001b[1;34m(a_graph, a_node)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mpaths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0muser\u001b[0m \u001b[1;32min\u001b[0m \u001b[0musers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ms_path_1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0musers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0ma_node\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-23-96e517e42713>\u001b[0m in \u001b[0;36ms_path_1\u001b[1;34m(graph, a_node, users)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m                     \u001b[1;32mif\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m                         \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m                         \u001b[0mpath\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 227411"
+     ]
     }
    ],
    "source": [
@@ -928,8 +991,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "c3b3c8d6-1ac5-452c-a53e-9e4a89e46ba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'PageRank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f8727e4a-7a03-4146-99ba-8a8f0ce57ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.31456466497258256"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'ClosenessCentrality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "40b3d894-94bf-4ea5-bbad-cf386a96d6a5",
    "metadata": {},
    "outputs": [
     {
@@ -938,43 +1032,28 @@
        "3"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'PageRank')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8727e4a-7a03-4146-99ba-8a8f0ce57ba5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'ClosenessCentrality')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40b3d894-94bf-4ea5-bbad-cf386a96d6a5",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'DegreeCentrality')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "f90045a1-ddd7-4ebf-8adb-906b0fde4d00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = reduceGraph(graph, \"2010-01-01\", \"2010-01-01\")"
+    "users=[]\n",
+    "for key in graph.keys():\n",
+    "    users.append(list(graph[key].keys()))\n",
+    "users.append(list(graph.keys()))\n",
+    "users = set(list(itertools.chain.from_iterable(users)))\n",
+    "users.remove(227411)"
    ]
   },
   {
@@ -983,7 +1062,9 @@
    "id": "94230291-8b07-40e4-9a1c-e0e8a87de2ae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_path_1(graph, 227411, users)"
+   ]
   },
   {
    "cell_type": "code",
