--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "118ec167-c590-4827-871c-c07be6647eb3",
    "metadata": {},
    "outputs": [],
@@ -747,8 +747,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "429f0514-b8a6-404f-b9fd-416c86d5cc89",
+   "metadata": {},
+   "source": [
+    "I guess directed and unweighted versions are better in this case, cause I don't think the number of interactions is really important here."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "c50a0ef4-8653-42d7-9718-80e9b73713c7",
    "metadata": {},
    "outputs": [],
@@ -765,22 +773,22 @@
     "    q.append(a_node)\n",
     "    visited[a_node] = True\n",
     "    \n",
-    "    while q:\n",
-    "        current = q[0]\n",
+    "    while q:                                            #uses a queue\n",
+    "        current = q[0]                                  #takes first in queue\n",
     "        q.popleft()\n",
     "        \n",
-    "        if current in graph.keys():\n",
-    "            for x in graph[current]:\n",
+    "        if current in graph.keys():                     #visits every son of the current node\n",
+    "            for x in list(graph[current]):\n",
     "                if x not in visited.keys():\n",
     "                    q.append(x)\n",
     "                    visited[x] = True\n",
     "                    \n",
-    "                if x in distances.keys():\n",
+    "                if x in distances.keys():                        #checks and updates\n",
     "                    if distances[x] > distances[current] + 1:\n",
     "                        distances[x] = distances[current] + 1 \n",
     "        \n",
     "                    \n",
-    "    for key in list(distances):\n",
+    "    for key in list(distances):                                  #removes not connected nodes\n",
     "        if distances[key] == 999999999:\n",
     "            distances.pop(key)\n",
     "                \n",
@@ -789,15 +797,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "id": "025fbca9-b37f-4153-a799-cea41540992f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def s_path_1(graph, a_node,users):\n",
+    "def s_path_1(graph, a_node, users):                     #same as the previous function but it also saves the path\n",
     "    distances = {}\n",
     "    visited = {}\n",
-    "    path ={}\n",
+    "    path = {}\n",
     "    for user in users:\n",
     "        distances[user] = 999999999\n",
     "    distances[a_node] = 0\n",
@@ -806,77 +814,81 @@
     "    visited[a_node] = True\n",
     "    path[a_node] = []\n",
     "    \n",
-    "    while q:\n",
-    "        current = q[0]\n",
+    "    while q:                                           \n",
+    "        current = q[0]                                  \n",
     "        q.popleft()\n",
     "        \n",
-    "        if current in graph.keys():\n",
-    "            for x in graph[current]:\n",
+    "        if current in graph.keys():                    \n",
+    "            for x in list(graph[current]):\n",
     "                if x not in visited.keys():\n",
     "                    q.append(x)\n",
     "                    visited[x] = True\n",
     "                    \n",
-    "                    \n",
-    "                if x in distances.keys():\n",
+    "                if x in distances.keys():                        \n",
     "                    if distances[x] > distances[current] + 1:\n",
     "                        distances[x] = distances[current] + 1\n",
-    "                        path[x] = path[current]\n",
+    "                        path[x] = path[current].copy()                     #saves path\n",
     "                        path[x].append(current)\n",
-    "                        \n",
-    "                    \n",
-    "    for key in list(distances):\n",
-    "        if distances[key] == 999999999:\n",
-    "            distances.pop(key)\n",
+    "\n",
     "                \n",
     "    return path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "id": "d4e3e0f5-e881-4d8d-bfce-92d5dc6a410f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def betweeness(a_graph, a_node):\n",
-    "    users=[]\n",
+    "    users=[]                                                              #find users\n",
+    "    for key in a_graph.keys():\n",
+    "        users.append(list(a_graph[key].keys()))\n",
+    "    users.append(list(a_graph.keys()))\n",
+    "    users = set(list(itertools.chain.from_iterable(users)))\n",
+    "    \n",
+    "    paths = []\n",
+    "    for user in users:                                                   #find all the shortest paths\n",
+    "        a = s_path_1(a_graph, user, users)\n",
+    "        for key in a.keys():\n",
+    "            if a_node in a[key]:                                         #1 if our node is in path, 0 otherwise\n",
+    "                paths.append(1)\n",
+    "            else:\n",
+    "                paths.append(0)\n",
+    "        \n",
+    "    return(sum(paths)/len(paths))                                        #shortest paths passing from our node/all shortest paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "102f0b43-d6b7-45c6-85b3-174dd22ae2a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pagerank(a_graph, a_node):                                           #0.85 is the google damping factor\n",
+    "    \n",
+    "    users=[]                                                             #find users\n",
     "    for key in a_graph.keys():\n",
     "        users.append(list(a_graph[key].keys()))\n",
     "    users.append(list(a_graph.keys()))\n",
     "    users = set(list(itertools.chain.from_iterable(users)))\n",
     "    users.remove(a_node)\n",
     "    \n",
-    "    paths = []\n",
-    "    for user in users:\n",
-    "        a = s_path_1(a_graph, user, users)\n",
-    "        for key in a.keys():\n",
-    "            if a_node in a[key]:\n",
-    "                paths.append(1)\n",
-    "            else:\n",
-    "                paths.append(1)\n",
-    "        \n",
-    "    return(sum(paths)/len(paths))"
+    "    return((1-0.85)/len(users)+0.85)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "102f0b43-d6b7-45c6-85b3-174dd22ae2a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pagerank(a_graph, a_node):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "b5df606f-d841-4fb8-963e-836831815bac",
    "metadata": {},
    "outputs": [],
    "source": [
     "def closeness(a_graph, a_node):\n",
-    "    users=[]\n",
+    "    users=[]                                                             #find users\n",
     "    for key in a_graph.keys():\n",
     "        users.append(list(a_graph[key].keys()))\n",
     "    users.append(list(a_graph.keys()))\n",
@@ -889,12 +901,12 @@
     "    for key in distances.keys():\n",
     "        sum_d = sum_d + distances[key]\n",
     "\n",
-    "    return(len(users)/sum_d)"
+    "    return(len(users)/sum_d)                                              #n-1/sum of all shortest path from a_node to each user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "a3ee3280-0147-40f1-bffa-96194abacecf",
    "metadata": {},
    "outputs": [],
@@ -914,12 +926,12 @@
     "            if a_node in a_graph[user].keys():\n",
     "                degreec = degreec + 1\n",
     "                \n",
-    "    return(degreec)"
+    "    return(degreec/len(users))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "0d827e21-595b-4798-9f5a-2564b4dcd2c0",
    "metadata": {},
    "outputs": [],
@@ -947,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "id": "5cfc4aad-6f29-406e-8395-c2036398014e",
    "metadata": {},
    "outputs": [],
@@ -966,23 +978,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 80,
    "id": "537d2c90-d842-4ac3-8656-b1d47653c530",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "227411",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-34-f738375c35b0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mFunctionality_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m227411\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2010-01-01\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2010-01-01\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Betweeness'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-28-9a26a95f23ca>\u001b[0m in \u001b[0;36mFunctionality_2\u001b[1;34m(a_node, start_date, end_date, metric, a_graph)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0ma_graph_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreduceGraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_date\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'Betweeness'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbetweeness\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'PageRank'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpagerank\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-33-9f114a37d40f>\u001b[0m in \u001b[0;36mbetweeness\u001b[1;34m(a_graph, a_node)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mpaths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0muser\u001b[0m \u001b[1;32min\u001b[0m \u001b[0musers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ms_path_1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0musers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0ma_node\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-23-96e517e42713>\u001b[0m in \u001b[0;36ms_path_1\u001b[1;34m(graph, a_node, users)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m                     \u001b[1;32mif\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m                         \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdistances\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m                         \u001b[0mpath\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 227411"
-     ]
+     "data": {
+      "text/plain": [
+       "0.01779978103682672"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -991,17 +999,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "c3b3c8d6-1ac5-452c-a53e-9e4a89e46ba2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8500637755102041"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'PageRank')"
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'PageRank')   #TO BE DONE, it misses the chain part(which is the main part)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
    "id": "f8727e4a-7a03-4146-99ba-8a8f0ce57ba5",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1030,7 @@
        "0.31456466497258256"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,17 +1041,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "id": "40b3d894-94bf-4ea5-bbad-cf386a96d6a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "0.0012755102040816326"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,6 +1059,14 @@
    "source": [
     "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'DegreeCentrality')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a33f9c1a-4b6f-4e34-bab4-5ed09edf9b01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1099,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "d208b4ca",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "add3acaa",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "45035927-732c-40e9-bf11-01d517b9cc41",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "a6a92341-273a-4db5-94b8-11295f3364bb",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "0fcdd680-3dd5-48a9-bbe1-d8b611be4990",
    "metadata": {},
    "outputs": [
