--- a/main.ipynb
+++ b/main.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "c50a0ef4-8653-42d7-9718-80e9b73713c7",
    "metadata": {},
    "outputs": [],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "id": "025fbca9-b37f-4153-a799-cea41540992f",
    "metadata": {},
    "outputs": [],
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "id": "d4e3e0f5-e881-4d8d-bfce-92d5dc6a410f",
    "metadata": {},
    "outputs": [],
@@ -862,27 +862,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "id": "102f0b43-d6b7-45c6-85b3-174dd22ae2a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def pagerank(a_graph, a_node):                                           #0.85 is the google damping factor\n",
     "    \n",
-    "    users=[]                                                             #find users\n",
+    "    users = []                                                            #find users\n",
     "    for key in a_graph.keys():\n",
     "        users.append(list(a_graph[key].keys()))\n",
     "    users.append(list(a_graph.keys()))\n",
     "    users = set(list(itertools.chain.from_iterable(users)))\n",
     "    users.remove(a_node)\n",
     "    \n",
-    "    return((1-0.85)/len(users)+0.85)\n",
+    "    fac = 0\n",
+    "    \n",
+    "    for user in users:                                                   #finds parents and calcute pagerank\n",
+    "        if user in a_graph.keys():\n",
+    "            if a_node in a_graph[user].keys():\n",
+    "                fac_1 = pagerank(a_graph, user)/len(a_graph[user])       #recursive\n",
+    "                fac = fac_1 + fac\n",
+    "    \n",
+    "    return((1-0.85)/len(users)+0.85*fac)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "id": "b5df606f-d841-4fb8-963e-836831815bac",
    "metadata": {},
    "outputs": [],
@@ -906,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "a3ee3280-0147-40f1-bffa-96194abacecf",
    "metadata": {},
    "outputs": [],
@@ -959,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "5cfc4aad-6f29-406e-8395-c2036398014e",
    "metadata": {},
    "outputs": [],
@@ -978,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "id": "537d2c90-d842-4ac3-8656-b1d47653c530",
    "metadata": {},
    "outputs": [
@@ -988,7 +996,7 @@
        "0.01779978103682672"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,28 +1007,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "id": "c3b3c8d6-1ac5-452c-a53e-9e4a89e46ba2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8500637755102041"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RecursionError",
+     "evalue": "maximum recursion depth exceeded in comparison",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-66-c5e5b01e4014>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mFunctionality_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4203\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2010-01-01\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2010-01-01\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'PageRank'\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m#doesn't work :( seems like there's a cycle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-29-9a26a95f23ca>\u001b[0m in \u001b[0;36mFunctionality_2\u001b[1;34m(a_node, start_date, end_date, metric, a_graph)\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbetweeness\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'PageRank'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpagerank\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'ClosenessCentrality'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcloseness\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-63-53f1d21208f0>\u001b[0m in \u001b[0;36mpagerank\u001b[1;34m(a_graph, a_node)\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0muser\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma_graph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0ma_node\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma_graph\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m                 \u001b[0mfac_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpagerank\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m       \u001b[1;31m#recursive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m                 \u001b[0mfac\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfac_1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfac\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "... last 1 frames repeated, from the frame below ...\n",
+      "\u001b[1;32m<ipython-input-63-53f1d21208f0>\u001b[0m in \u001b[0;36mpagerank\u001b[1;34m(a_graph, a_node)\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0muser\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma_graph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0ma_node\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma_graph\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m                 \u001b[0mfac_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpagerank\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_graph\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m       \u001b[1;31m#recursive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m                 \u001b[0mfac\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfac_1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfac\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRecursionError\u001b[0m: maximum recursion depth exceeded in comparison"
+     ]
     }
    ],
    "source": [
-    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'PageRank')   #TO BE DONE, it misses the chain part(which is the main part)"
+    "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'PageRank')   #doesn't work :( seems like there's a cycle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "id": "f8727e4a-7a03-4146-99ba-8a8f0ce57ba5",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1043,7 @@
        "0.31456466497258256"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "id": "40b3d894-94bf-4ea5-bbad-cf386a96d6a5",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1064,7 @@
        "0.0012755102040816326"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,30 +1072,6 @@
    "source": [
     "Functionality_2(227411, \"2010-01-01\", \"2010-01-01\", 'DegreeCentrality')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a33f9c1a-4b6f-4e34-bab4-5ed09edf9b01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f90045a1-ddd7-4ebf-8adb-906b0fde4d00",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94230291-8b07-40e4-9a1c-e0e8a87de2ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1126,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "d208b4ca",
    "metadata": {},
    "outputs": [],
@@ -1153,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "add3acaa",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "45035927-732c-40e9-bf11-01d517b9cc41",
    "metadata": {},
    "outputs": [],
@@ -1324,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "a6a92341-273a-4db5-94b8-11295f3364bb",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "0fcdd680-3dd5-48a9-bbe1-d8b611be4990",
    "metadata": {},
    "outputs": [
